[package]
name = "tokio-send-fd"
version = "0.9.3"
edition = "2021"
authors = ["Alexander Smoktal [https://github.com/alexander-smoktal]"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexander-smoktal/tokio-send-fd"
description = """
A wrapper for tokio::net::UnixStream to send file descriptors
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
passfd = "0.1.4"
tokio = { version = "1.19", features = ["net", "rt", "macros", "io-util"] }

[dev-dependencies]
tempdir = "0.3.7"
